# VOTR

./: .gitignore  Policy.md  README.md  UPDATES.md  config.yaml  out.txt  pyproject.toml  requirements.txt
benchmarks/: medium_50_servers.json
benchmarks/baselines_ablations/: README.md  run_profiles.py
benchmarks/catalog_drift/: dynamic_registration_bloomberg_cases.json  dynamic_registration_cases.json  run_dynamic_registration_drift.py
benchmarks/confidence/: run_conformal_coverage.py  run_scale.py  run_threshold_sensitivity.py
benchmarks/efficiency/: build_paper_comparison.py  measure_schema_tokens.py  run_latency.py  run_token_pareto.py
benchmarks/functional_correctness/: README.md  _run_all_suites.py  ablate_field_aware.py  ambiguity_collision.priority.json  build_scaled_suites.py  equivalence_map.json  evaluate.py  multi_hop.cross_app.json  multi_hop.large.cross_app.json  multi_hop.medium_250.cross_app.json  multi_hop.medium_50.cross_app.json  multi_hop.small_100.cross_app.json  multi_hop.small_3.cross_app.json  multi_tool.large.single_turn.json  multi_tool.medium_250.single_turn.json  multi_tool.medium_50.single_turn.json  (+10 more)
data/: .gitignore  README.md
docs/: index.html
evaluation/: calibrate_handoff.py  confidence_eval.py  metrics.py  multihop_eval.py
scripts/: _analyze_nc.py  build_index.py  build_livemcpbench_embedding_json.py  calibrate_conformal.py  export_server_embedding_json.py  export_server_subset_embedding_json.py  generate_results_tables.py  merge_bloomberg_into_mcpzero.py  migrate_mcpzero.py  register_bloomberg_from_sse.py
(+310 files in other folders)
