[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-router"
version = "0.1.0"
description = "Hierarchical hybrid tool router for MCP applications"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.27.0",
  "pydantic>=2.5.0",
  "pydantic-settings>=2.1.0",
  "pyyaml>=6.0.1",
  "python-dotenv>=1.0.0",
  "openai>=1.40.0",
  "numpy>=1.24.0",
  "rank-bm25>=0.2.2",
  "scikit-learn>=1.3.0",
  "ijson>=3.2.3",
  "httpx>=0.27.0",
]

[project.optional-dependencies]
qdrant = ["qdrant-client>=1.9.0"]
mcp = ["mcp>=1.0.0"]
eval = ["tiktoken>=0.5.0"]
dev = ["pytest>=7.0.0", "ruff>=0.4.0", "tiktoken>=0.5.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
